🐛 fix et refix et re... du flickering de la nav des offres sous ios

--- a/src/styles/_zindex.scss
+++ b/src/styles/_zindex.scss
@@ -4,4 +4,8 @@ $zindex-main-menu: 8000;
 $zindex-overlay: 7000;
 $zindex-deckloader: 6000;
 $zindex-booking-card: 5000;
-$zindex-decknavigation: 4500;
+$zindex-close-button: 300;
+$zindex-back-button: 300;
+$zindex-main-footer: 250;
+$zindex-decknavigation: 200;
+$zindex-deckdraggable: 100;
