--- a/src/styles/components/layout/Footer.scss
+++ b/src/styles/components/layout/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-
+  z-index: $zindex-main-footer;
   background-color: transparent;
 
   .button-wrapper {
@@ -9,6 +9,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+
     button {
       border: 0;
       border-radius: 50%;
@@ -18,6 +19,7 @@
       display: block;
       background: none;
       margin: auto;
+
       &:focus {
         outline: none;
       }
@@ -38,9 +40,11 @@
 
   &.colored {
     background-color: rgba($white, 0.9);
+
     &.bordered {
       @include dotted($primary);
     }
+
     button {
       background-color: white;
     }
